# pon

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  aot-parity-floor.json  aot-parity.json  conformance-floor.json  conformance-full-floor.json  probe_classes.py  probe_for_loop.py  probe_match.py  probe_numeric_ops.py
.cargo/: config.toml
corpus/: dict_list_str_methods.py  exceptions.py  generators.py
pon/: Cargo.toml
pon-abi/: Cargo.toml
pon-aot/: Cargo.toml
pon-aot-dynamic/: Cargo.toml
pon-aot-dynamic/src/: lib.rs
pon-aot/src/: buildver.rs  entry.rs  isa.rs  lib.rs  link.rs  object_module.rs  reachable.rs
pon-cli/: Cargo.toml
pon-cli/src/: build.rs  lib.rs  main.rs
pon-cli/tests/: run_cli.rs
pon-codegen/: Cargo.toml
pon-codegen/src/: annotations.rs  baseline.rs  helpers.rs  infer.rs  isa.rs  lib.rs  optimizing.rs  region.rs
pon-codegen/src/baseline/: attr.rs  call.rs  compare.rs  container.rs  control.rs  exc.rs  gen.rs  mapping.rs  match_.rs  name.rs  number.rs  spill.rs  strings.rs
pon-conformance/: Cargo.toml  divergence-ledger.toml  exclusions.toml
pon-gc/: Cargo.toml
pon-ir/: Cargo.toml
pon-jit/: Cargo.toml
pon-jit/src/: inspect.rs  lib.rs  tierup.rs
pon-jit/tests/: run_slice.rs
pon-pm/: Cargo.toml
pon-pm/fixtures/wheels/: flit_core-3.12.0-py3-none-any.whl  idna-3.10-py3-none-any.whl  pkg_b-1.0.0-py3-none-any.whl
pon-pm/src/: cli.rs  editable.rs  error.rs  install.rs  lib.rs  local.rs  lock.rs  main.rs  manifest.rs  marker.rs  names.rs  pyproject.rs  requirement.rs  requirements.rs  vcs.rs
pon-pm/src/index/: mod.rs  simple_json.rs
pon-pm/src/index/fixtures/: demo-pep691.json  pkg-c-pep691.json
pon-pm/src/native/: mod.rs
pon-pm/src/resolve/: mod.rs  package.rs  provider.rs  source.rs  versionset.rs
pon-pm/src/sdist/: build.rs  mod.rs
pon-pm/src/wheel/: compat.rs  filename.rs  mod.rs  record.rs  scripts.rs
pon-runtime/: Cargo.toml
pon-runtime/capi/: pon_capi_args.c  pon_capi_bootstrap.c
pon-runtime/include/: Python.h  compile.h  datetime.h  frameobject.h  pymem.h  pythread.h  structmember.h  traceback.h
pon-runtime/include/internal/: pycore_frame.h
pon-runtime/include/pon_capi/: args.h  containers.h  containers_inline.h  core.h  core_inline.h  err.h  err_inline.h  numbers.h  numbers_inline.h  object.h  object_inline.h  runtime.h  runtime_inline.h  strings.h  strings_inline.h  typeobj.h  typeobj_inline.h
pon-runtime/src/: abi.rs  abstract_op.rs  aot_entry.rs  builtins.rs  capi.rs  descr.rs  dynexec.rs  feedback.rs  gcroot.rs  import.rs  inspect.rs  intern.rs  lib.rs  mro.rs  object.rs  pyhash.rs  stackmap.rs  sync.rs  sys.rs  tag.rs  thread.rs  thread_state.rs  traceback.rs
pon-runtime/src/abi/: attr.rs  builtins.rs  call.rs  exc.rs  format.rs  gen.rs  import.rs  iter.rs  map.rs  match_.rs  number.rs  object.rs  seq.rs  str_.rs
pon-runtime/src/capi/: args_test.rs  containers.rs  err.rs  mod.rs  numbers.rs  object_.rs  runtime_.rs  strings.rs  twin.rs  typeobj.rs
pon-runtime/src/native/: array.rs  ast_.rs  asyncio.rs  atexit.rs  big_cext.rs  binascii.rs  builtins_batch.rs  builtins_mod.rs  cext.rs  codecs.rs  collections.rs  colorize.rs  contextvars.rs  csv_.rs  curses_.rs  errno.rs  faulthandler.rs  fcntl_.rs  gc.rs  grp.rs  hashes.rs  imp.rs  installed.rs  io.rs  itertools.rs  lsprof.rs  math.rs  mmap.rs  mod.rs  multibyte_codecs.rs  multiprocessing.rs  opcode_.rs  operator_.rs  os.rs  packaging_compat.rs  pickle.rs  pon_mod.rs  posix.rs  posixshmem.rs  posixsubprocess.rs  (+29 more)
pon-runtime/src/native/sre/: fixtures.json  mod.rs  vm.rs
pon-runtime/src/native/unicodedata/: mod.rs  tables.rs
pon-runtime/src/types/: async_generator.rs  bool_.rs  bytearray_.rs  bytes_.rs  cell.rs  classmethod.rs  complex_.rs  coroutine.rs  dict.rs  exc.rs  float.rs  frame.rs  frozenset.rs  function.rs  generator.rs  instance_dict.rs  int.rs  lazy_iter.rs  list.rs  long.rs  memoryview.rs  method.rs  mod.rs  module.rs  none.rs  property.rs  range_.rs  set_.rs  slice_.rs  str_.rs  super_.rs  tuple.rs  type_.rs  typealias.rs  unicode.rs  weakref.rs
pon-runtime/tests/: abstract_op.rs  init_race.rs  loom_mutex.rs  sre_vm.rs  tag_discipline.rs
pon/fixtures/wheels/: flit_core-3.12.0-py3-none-any.whl  idna-3.9-py3-none-any.whl  pkg_a-1.0.0-py3-none-any.whl  pkg_c-1.0.0-py3-none-any.whl
pon/src/: astconv.rs  cli.rs  editable.rs  env.rs  error.rs  install.rs  lib.rs  local.rs  lock.rs  main.rs  marker.rs  metadata.rs  names.rs  pyproject.rs  repl.rs  requirement.rs  requirements.rs  run.rs  vcs.rs
pon/src/index/: download.rs  html.rs  mod.rs  simple_json.rs
pon/src/index/fixtures/: pkg-a-pep691.json  pkg-b-pep691.json  pkg-c-pep691.json
pon/src/install/: direct_url.rs
pon/src/native/: mod.rs
pon/src/resolve/: mod.rs  package.rs  provider.rs  source.rs  versionset.rs
pon/src/sdist/: build.rs  mod.rs
pon/src/wheel/: compat.rs  filename.rs  mod.rs  record.rs  scripts.rs
pon/tests/: class_runtime.rs  cli_surface.rs  run_cli.rs
scratch/: abc_chain_characterize.py  abc_chain_probe.py  abc_probe.py  abc_then_concurrent.py  annotate_probe.py  arity_dup_message_probe.py  arity_message_probe.py  arity_typeerror_probe.cpython.out  arity_typeerror_probe.py  ascii_probe.py  ascii_probe.python3.14.out  assigned_gaps_probe.py  ba_probe2.py  ba_sub_probe.py  backend_import.py  bigcharset1.py  boundmethod_repro.py  broken_cached.py  busy_sigint_probe.py  bytearray_dunder_probe.py  bytes_guard_probe.py  bytes_hash_probe.py  bytes_percent_probe.pon.out  bytes_percent_probe.py  bytes_percent_probe.python.out  bytes_repr_probe.py  bytes_subclass_probe.py  bytesio_full.cpython.out  callee_all_probe.py  callee_build.py  callee_encoding_name_oracle.py  callee_format_probe.py  callee_getattr_then_call.py  callee_lru_probe.py  callee_method_kw_probe.py  callee_platform_chain.py  callee_reconfigure_arity_oracle.py  callee_reconfigure_bool_oracle.py  callee_reconfigure_defaults.py  callee_reconfigure_errors_none.py  (+471 more)
scripts/: gate.sh
target-abcmixin/: .rustc_info.json
target-builtinbind/: .rustc_info.json
(+397 files in other folders)
