[workspace]
resolver = "2"
members = [
	"pon-ir",
	"pon-gc",
	"pon-runtime",
	"pon-codegen",
	"pon-jit",
	"pon-aot",
	"pon-abi",
	"pon-cli",
	"pon-conformance",
	"pon-pm",
]

[workspace.package]
edition = "2024"
rust-version = "1.94.0"

[workspace.dependencies]
# --- Internal Crates ---
pon-ir          = { path = "pon-ir" }
pon-gc          = { path = "pon-gc" }
pon-runtime     = { path = "pon-runtime" }
pon-codegen     = { path = "pon-codegen" }
pon-jit         = { path = "pon-jit" }
pon-aot         = { path = "pon-aot" }
pon-abi         = { path = "pon-abi" }
pon-cli         = { path = "pon-cli" }
pon-conformance = { path = "pon-conformance" }
pon-pm          = { path = "pon-pm" }

# --- Cranelift: exact-pin lockstep across all six crates ---
cranelift-codegen   = "=0.133.1"
cranelift-frontend  = "=0.133.1"
cranelift-module    = "=0.133.1"
cranelift-native    = "=0.133.1"
cranelift-jit       = "=0.133.1"
cranelift-object    = "=0.133.1"

# --- ruff: git tag dep ---
ruff_python_parser  = { git = "https://github.com/astral-sh/ruff", tag = "0.14.0" }
ruff_python_ast     = { git = "https://github.com/astral-sh/ruff", tag = "0.14.0" }
ruff_text_size      = { git = "https://github.com/astral-sh/ruff", tag = "0.14.0" }

# --- misc ---
target-lexicon      = "0.13"
libc                = "0.2"
anyhow              = "1"
num-bigint          = "0.4.6"
num-integer         = "0.1"
num-traits          = "0.2"
loom                = "0.7"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
ureq                = "3"
zip                 = "6"
bzip2               = "0.6"
blake2              = "0.10"
md-5               = "0.10"
sha1                = "0.10"
sha2                = "0.10"
sha3                = "0.10"
scrypt              = "0.11"
openssl            = { version = "0.10", features = ["vendored"] }
base64              = "0.22"
flate2              = "1"
xz2                 = "0.1"
rusqlite           = { version = "0.32", features = ["bundled"] }
zstd                = "0.13"
tar                 = "0.4"
pubgrub             = "0.4"
pep440_rs           = { version = "0.7.3", features = ["version-ranges"] }
pep508_rs           = "0.9"
version-ranges      = "0.1"
toml_edit           = { version = "0.23", features = ["serde"] }
clap                = { version = "4", features = ["derive"] }

[workspace.lints.rust]
# ──────────────────────────────────────────────────────────────────────────────
# Rust Lint Levels
# ──────────────────────────────────────────────────────────────────────────────
mismatched_lifetime_syntaxes = "allow"

[workspace.lints.clippy]
# ──────────────────────────────────────────────────────────────────────────────
# Base Lint Levels
# ──────────────────────────────────────────────────────────────────────────────
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# ──────────────────────────────────────────────────────────────────────────────
# Meta: Lint Attributes
# ──────────────────────────────────────────────────────────────────────────────
allow_attributes_without_reason = "warn" # Enforce reason for all #[allow]

# ──────────────────────────────────────────────────────────────────────────────
# Safety & Unsafe Code
# ──────────────────────────────────────────────────────────────────────────────
borrow_as_ptr = "allow"
cast_ptr_alignment = "allow"
ptr_as_ptr = "allow"
ref_as_ptr = "allow"
undocumented_unsafe_blocks = "warn"
unsafe_derive_deserialize = "allow"

# ──────────────────────────────────────────────────────────────────────────────
# Numeric Casts & Conversions
# ──────────────────────────────────────────────────────────────────────────────
cast_lossless = "allow"            # u32 as u64 - 'as' is cleaner than From
cast_possible_truncation = "allow" # u64 as u32 - often intentional
cast_possible_wrap = "allow"       # u32 as i32 - can be intentional
cast_precision_loss = "allow"      # f64 as f32 - sometimes acceptable
cast_sign_loss = "allow"           # i32 as u32 - sometimes needed
tuple_array_conversions = "allow"  # Non-Into conversion is more clear

# ──────────────────────────────────────────────────────────────────────────────
# Floating Point
# ──────────────────────────────────────────────────────────────────────────────
float_cmp = "allow" # Tests mostly do this + we know what we're doing

# ──────────────────────────────────────────────────────────────────────────────
# Functions & Closures
# ──────────────────────────────────────────────────────────────────────────────
inline_always = "allow"                      # Needed for performance-critical code
must_use_candidate = "allow"                 # Not every function needs #[must_use]
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow" # .map(ToString::to_string) can be clearer
return_self_not_must_use = "allow"           # Builder pattern methods

# ──────────────────────────────────────────────────────────────────────────────
# Structs & Types
# ──────────────────────────────────────────────────────────────────────────────
inconsistent_struct_constructor = "allow"
missing_fields_in_debug = "allow"         # Not every field needs to be in Debug output
struct_excessive_bools = "allow"          # Usually with builders

# ──────────────────────────────────────────────────────────────────────────────
# Pattern Matching
# ──────────────────────────────────────────────────────────────────────────────
match_same_arms = "allow"                    # Can be intentional for clarity
match_wildcard_for_single_variants = "allow" # _ can be clearer than listing variants
option_if_let_else = "allow"                 # match/if-let-else often clearer

# ──────────────────────────────────────────────────────────────────────────────
# Imports & Module Organization
# ──────────────────────────────────────────────────────────────────────────────
enum_glob_use = "allow"
items_after_statements = "allow" # Sometimes more readable
wildcard_imports = "allow"       # Cleaner for preludes and test modules

# ──────────────────────────────────────────────────────────────────────────────
# Variables & Type Inference
# ──────────────────────────────────────────────────────────────────────────────
let_underscore_untyped = "allow" # Type obvious from context
similar_names = "allow"          # 'req' and 'res' together are fine

# ──────────────────────────────────────────────────────────────────────────────
# Literals & Formatting
# ──────────────────────────────────────────────────────────────────────────────
unreadable_literal = "allow" # 10_000_000 vs 0xDEADBEEF is context dependent
verbose_bit_mask = "allow"   # Explicit bit patterns can be clearer than hex

# ──────────────────────────────────────────────────────────────────────────────
# Code Style
# ──────────────────────────────────────────────────────────────────────────────
default_trait_access = "allow"        # Default::default() sometimes clearer
significant_drop_tightening = "allow" # We pay attention to this already

# ──────────────────────────────────────────────────────────────────────────────
# Documentation
# ──────────────────────────────────────────────────────────────────────────────
missing_errors_doc = "allow" # Documenting every error return is often redundant
missing_panics_doc = "allow" # Not every panic needs docs, especially assert!

# ──────────────────────────────────────────────────────────────────────────────
# Complexity
# ──────────────────────────────────────────────────────────────────────────────
too_many_arguments = "allow" # Argument count is rarely the real complexity signal
too_many_lines = "allow"     # Arbitrary limits don't account for necessary complexity

# ──────────────────────────────────────────────────────────────────────────────
# Profile Configurations
# ──────────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 16
debug = false
strip = "symbols"
split-debuginfo = "off"

[profile.local]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true
strip = false

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
incremental = true
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Deps compile optimized once and cache; your own crates stay fast.
[profile.dev.package."*"]
opt-level = 2
debug = false
