[package]
name = "pon-aot"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
free-threading = ["pon-codegen/free-threading", "pon-runtime/free-threading"]

[lints]
workspace = true

[dependencies]
pon-codegen.workspace = true
pon-runtime.workspace = true
pon-ir.workspace = true
anyhow.workspace = true
target-lexicon.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-native.workspace = true
cranelift-object.workspace = true
cranelift-module.workspace = true
