[package]
name = "pon-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
free-threading = ["pon-jit/free-threading", "pon-aot/free-threading"]

[lints]
workspace = true

[dependencies]
pon-ir.workspace = true
pon-jit.workspace = true
pon-runtime.workspace = true
pon-aot.workspace = true
anyhow.workspace = true
ruff_python_ast.workspace = true
ruff_python_parser.workspace = true
ruff_text_size.workspace = true
