[package]
name = "pon-codegen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true


[lints]
workspace = true

[dependencies]
pon-ir.workspace = true
pon-runtime.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
target-lexicon.workspace = true
ruff_python_ast.workspace = true

[dev-dependencies]
cranelift-jit.workspace = true