[package]
name = "pon-jit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true


[lints]
workspace = true

[dependencies]
pon-codegen.workspace = true
pon-runtime.workspace = true
pon-gc.workspace = true
pon-ir.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
