[package]
name = "pon-pm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
free-threading = ["pon-cli/free-threading"]

[lints]
workspace = true

[dependencies]
pon-cli.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
zip.workspace = true
sha2.workspace = true
base64.workspace = true
