[package]
name = "pon-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true


[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = []
free-threading = ["pon-gc/free-threading"]
[lints]
workspace = true

[dependencies]
pon-gc.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true

[dev-dependencies]
loom.workspace = true
