[package]
name = "pon-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true


[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = []
free-threading = ["pon-gc/free-threading"]
# J0.2 bring-up flag: immediate small-int tagging.  Default-on at the N1
# cutover, deleted once the boxed-only path is gone.
tagged-ints = []
[lints]
workspace = true

[dependencies]
pon-gc.workspace = true
libc.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
bzip2.workspace = true
blake2.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
scrypt.workspace = true
xz2.workspace = true
zstd.workspace = true

[dev-dependencies]
loom.workspace = true
