[package]
name = "pon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true


[lints]
workspace = true

[dependencies]
pon-ir.workspace = true
pon-jit.workspace = true
pon-runtime.workspace = true
pon-aot.workspace = true
anyhow.workspace = true
ruff_python_ast.workspace = true
ruff_python_parser.workspace = true
ruff_text_size.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
zip.workspace = true
sha2.workspace = true
base64.workspace = true
flate2.workspace = true
tar.workspace = true
pubgrub.workspace = true
pep440_rs.workspace = true
pep508_rs.workspace = true
version-ranges.workspace = true
toml_edit.workspace = true
clap.workspace = true
rustyline.workspace = true
